Update files A2/H2.aux, A1/H1.log, and A1/Assignment01_Practical.ipynb

--- a/A1/Assignment01_Practical.ipynb
+++ b/A1/Assignment01_Practical.ipynb
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -199,12 +199,12 @@
         "from sklearn.metrics import mean_squared_error\n",
         "\n",
         "# Load the oceanographic dataset from the provided link\n",
-        "# url = \"https://raw.githubusercontent.com/JakeMWu/single-linear-regression-CalCOFI-oceanographic-data/main/tempsal.csv\"\n",
+        "url = \"https://raw.githubusercontent.com/JakeMWu/single-linear-regression-CalCOFI-oceanographic-data/main/tempsal.csv\"\n",
         "# Im going to use the data but import it as a csv and use it locally\n",
-        "path = \"url.csv\"\n",
+        "# path = \"url.csv\"\n",
         "# Use only the first 300 rows\n",
-        "# oceanographic_data = pd.read_csv(url.csv, nrows=300)  \n",
-        "oceanographic_data = pd.read_csv(path, nrows=300)\n",
+        "oceanographic_data = pd.read_csv(url, nrows=300)  \n",
+        "# oceanographic_data = pd.read_csv(path, nrows=300)\n",
         "\n",
         "# Remove rows with NaN values in 'T_degC' or 'Salnty'\n",
         "oceanographic_data = oceanographic_data.dropna(subset=['T_degC', 'Salnty'])\n",
